--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@faker-js/faker": "^10.3.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-lag-radar": "^1.0.0"
