--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "typecheck": "tsc --project ./tsconfig.app.json"
   },
   "dependencies": {
+    "@base-ui/react": "^1.2.0",
+    "@fontsource-variable/geist": "^5.2.8",
     "@faker-js/faker": "^10.3.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -18,7 +20,10 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-lag-radar": "^1.0.0",
-    "tailwind-merge": "^3.5.0"
+    "shadcn": "^3.8.5",
+    "tailwind-merge": "^3.5.0",
+    "tailwindcss": "^4.1.17",
+    "tw-animate-css": "^1.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
