--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.575.0",
+    "nuqs": "^2.8.8",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-lag-radar": "^1.0.0",
